data/derived/comb/progs/unify/prog6436.ml.out
Characters 57-58:
  else if n=0 then 0
                   ^
Error: This expression has type int but an expression was expected of type
         'a list
